Update the book

--- a/final-words.html
+++ b/final-words.html
@@ -136,6 +136,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="final-words" class="section level1">
 <h1><span class="header-section-number">Chapter 6</span> Final Words</h1>
 <p>We have finished a nice book.</p>
+<p>By default, <code>tutorial</code> will convert all R chunks.</p>
+<div data-datacamp-exercise="" data-height="300" data-encoded="true">
+eyJsYW5ndWFnZSI6InIiLCJzYW1wbGUiOiJhIDwtIDJcbmIgPC0gM1xuXG5hICsgYiJ9
+</div>
 
 </div>
             </section>
