--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a><ul>
 <li class="chapter" data-level="6.1" data-path="final-words.html"><a href="final-words.html#sec-1"><i class="fa fa-check"></i><b>6.1</b> Sec 1</a></li>
+<li class="chapter" data-level="6.2" data-path="final-words.html"><a href="final-words.html#sec-2"><i class="fa fa-check"></i><b>6.2</b> Sec 2</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
