--- a/applications.html
+++ b/applications.html
@@ -104,17 +104,16 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Conteúdos</a></li>
-<li class="chapter" data-level="2" data-path="prerequisites.html"><a href="prerequisites.html"><i class="fa fa-check"></i><b>2</b> Prerequisites</a></li>
-<li class="chapter" data-level="3" data-path="intro.html"><a href="intro.html"><i class="fa fa-check"></i><b>3</b> Introduction</a></li>
-<li class="chapter" data-level="4" data-path="literature.html"><a href="literature.html"><i class="fa fa-check"></i><b>4</b> Literature</a></li>
-<li class="chapter" data-level="5" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>5</b> Methods</a></li>
-<li class="chapter" data-level="6" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>6</b> Applications</a><ul>
-<li class="chapter" data-level="6.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>6.1</b> Example one</a></li>
-<li class="chapter" data-level="6.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>6.2</b> Example two</a></li>
+<li class="chapter" data-level="2" data-path="revisao.html"><a href="revisao.html"><i class="fa fa-check"></i><b>2</b> Revisão</a></li>
+<li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a></li>
+<li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
+<li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
+<li class="chapter" data-level="5.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
+<li class="chapter" data-level="5.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
 </ul></li>
-<li class="chapter" data-level="7" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>7</b> Final Words</a><ul>
-<li class="chapter" data-level="7.1" data-path="final-words.html"><a href="final-words.html#sec-1"><i class="fa fa-check"></i><b>7.1</b> Sec 1</a></li>
-<li class="chapter" data-level="7.2" data-path="final-words.html"><a href="final-words.html#sec-2"><i class="fa fa-check"></i><b>7.2</b> Sec 2</a></li>
+<li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a><ul>
+<li class="chapter" data-level="6.1" data-path="final-words.html"><a href="final-words.html#sec-1"><i class="fa fa-check"></i><b>6.1</b> Sec 1</a></li>
+<li class="chapter" data-level="6.2" data-path="final-words.html"><a href="final-words.html#sec-2"><i class="fa fa-check"></i><b>6.2</b> Sec 2</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
@@ -138,13 +137,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 
             <section class="normal" id="section-">
 <div id="applications" class="section level1">
-<h1><span class="header-section-number">Chapter 6</span> Applications</h1>
+<h1><span class="header-section-number">Capítulo 5</span> Applications</h1>
 <p>Some <em>significant</em> applications are demonstrated in this chapter.</p>
 <div id="example-one" class="section level2">
-<h2><span class="header-section-number">6.1</span> Example one</h2>
+<h2><span class="header-section-number">5.1</span> Example one</h2>
 </div>
 <div id="example-two" class="section level2">
-<h2><span class="header-section-number">6.2</span> Example two</h2>
+<h2><span class="header-section-number">5.2</span> Example two</h2>
 
 </div>
 </div>
@@ -183,10 +182,10 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/marcionicolau/CCC192/edit/master/04-application.Rmd",
+"link": "https://github.com/marcionicolau/CCC192/edit/master/04-modelo_teoria.Rmd",
 "text": "Edit"
 },
-"download": ["bookdown-demo.pdf", "bookdown-demo.epub"],
+"download": ["material-ccc192.pdf", "material-ccc192.epub"],
 "toc": {
 "collapse": "subsection"
 }
@@ -194,17 +193,6 @@ gitbook.start({
 });
 </script>
 
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-  (function () {
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    script.src  = "https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML";
-    if (location.protocol !== "file:" && /^https?:/.test(script.src))
-      script.src  = script.src.replace(/^https?:/, '');
-    document.getElementsByTagName("head")[0].appendChild(script);
-  })();
-</script>
 </body>
 
 </html>
