Update the book

--- a/graph-dyn.html
+++ b/graph-dyn.html
@@ -32,8 +32,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="revisao.html">
-<link rel="next" href="graph-dyn.html">
+<link rel="prev" href="graph-base.html">
+<link rel="next" href="model-theo.html">
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -137,10 +137,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="graph_base" class="section level1">
-<h1><span class="header-section-number">Capítulo 3</span> Gráficos Básicos no R</h1>
+<div id="graph_dyn" class="section level1">
+<h1><span class="header-section-number">Capítulo 4</span> Gráficos Interativos e dinâmicos no R</h1>
 <script src=https://cdn.datacamp.com/datacamp-light-latest.min.js></script>
-<p>Here is a review of existing methods.</p>
+<p>We describe our methods in this chapter.</p>
 
 </div>
             </section>
@@ -148,8 +148,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
           </div>
         </div>
       </div>
-<a href="revisao.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="graph-dyn.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="graph-base.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="model-theo.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
@@ -178,7 +178,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/marcionicolau/CCC192/edit/master/02-graficos_basicos.Rmd",
+"link": "https://github.com/marcionicolau/CCC192/edit/master/03-graficos_interativos.Rmd",
 "text": "Edit"
 },
 "download": ["material-ccc192.pdf", "material-ccc192.epub"],
