--- a/references.html
+++ b/references.html
@@ -32,7 +32,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="final-words.html">
+<link rel="prev" href="model-pratical.html">
 
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -106,14 +106,15 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Conteúdos</a></li>
 <li class="chapter" data-level="2" data-path="revisao.html"><a href="revisao.html"><i class="fa fa-check"></i><b>2</b> Revisão</a></li>
 <li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a></li>
-<li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
-<li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
-<li class="chapter" data-level="5.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
-<li class="chapter" data-level="5.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
+<li class="chapter" data-level="4" data-path="graph-dyn.html"><a href="graph-dyn.html"><i class="fa fa-check"></i><b>4</b> Gráficos Interativos e dinâmicos no R</a></li>
+<li class="chapter" data-level="5" data-path="model-theo.html"><a href="model-theo.html"><i class="fa fa-check"></i><b>5</b> Modelo de Simulação (Conceitos Teóricos)</a><ul>
+<li class="chapter" data-level="5.1" data-path="model-theo.html"><a href="model-theo.html#conhecendo-o-problema"><i class="fa fa-check"></i><b>5.1</b> Conhecendo o problema</a></li>
+<li class="chapter" data-level="5.2" data-path="model-theo.html"><a href="model-theo.html#coleta-de-informacoes"><i class="fa fa-check"></i><b>5.2</b> Coleta de informações</a></li>
+<li class="chapter" data-level="5.3" data-path="model-theo.html"><a href="model-theo.html#abordagens-para-modelagem"><i class="fa fa-check"></i><b>5.3</b> Abordagens para modelagem</a></li>
 </ul></li>
-<li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a><ul>
-<li class="chapter" data-level="6.1" data-path="final-words.html"><a href="final-words.html#sec-1"><i class="fa fa-check"></i><b>6.1</b> Sec 1</a></li>
-<li class="chapter" data-level="6.2" data-path="final-words.html"><a href="final-words.html#sec-2"><i class="fa fa-check"></i><b>6.2</b> Sec 2</a></li>
+<li class="chapter" data-level="6" data-path="model-pratical.html"><a href="model-pratical.html"><i class="fa fa-check"></i><b>6</b> Modelo de Simulação (Conceitos Práticos)</a><ul>
+<li class="chapter" data-level="6.1" data-path="model-pratical.html"><a href="model-pratical.html#sec-1"><i class="fa fa-check"></i><b>6.1</b> Sec 1</a></li>
+<li class="chapter" data-level="6.2" data-path="model-pratical.html"><a href="model-pratical.html#sec-2"><i class="fa fa-check"></i><b>6.2</b> Sec 2</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
@@ -153,7 +154,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
           </div>
         </div>
       </div>
-<a href="final-words.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="model-pratical.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
