Update the book

--- a/graph-base.html
+++ b/graph-base.html
@@ -105,7 +105,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Conteúdos</a></li>
 <li class="chapter" data-level="2" data-path="revisao.html"><a href="revisao.html"><i class="fa fa-check"></i><b>2</b> Revisão</a></li>
-<li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a></li>
+<li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a><ul>
+<li class="chapter" data-level="3.1" data-path="graph-base.html"><a href="graph-base.html#historico"><i class="fa fa-check"></i><b>3.1</b> Histórico</a><ul>
+<li class="chapter" data-level="3.1.1" data-path="graph-base.html"><a href="graph-base.html#base-default"><i class="fa fa-check"></i><b>3.1.1</b> Base (<em>default</em>)</a></li>
+<li class="chapter" data-level="3.1.2" data-path="graph-base.html"><a href="graph-base.html#lattice-lattice"><i class="fa fa-check"></i><b>3.1.2</b> Lattice (<em>lattice</em>)</a></li>
+<li class="chapter" data-level="3.1.3" data-path="graph-base.html"><a href="graph-base.html#ggplot2-ggplot2"><i class="fa fa-check"></i><b>3.1.3</b> GGPlot2 (<em>ggplot2</em>)</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="4" data-path="graph-dyn.html"><a href="graph-dyn.html"><i class="fa fa-check"></i><b>4</b> Gráficos Interativos e dinâmicos no R</a></li>
 <li class="chapter" data-level="5" data-path="model-theo.html"><a href="model-theo.html"><i class="fa fa-check"></i><b>5</b> Modelo de Simulação (Conceitos Teóricos)</a><ul>
 <li class="chapter" data-level="5.1" data-path="model-theo.html"><a href="model-theo.html#conhecendo-o-problema"><i class="fa fa-check"></i><b>5.1</b> Conhecendo o problema</a></li>
@@ -140,8 +146,22 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="graph_base" class="section level1">
 <h1><span class="header-section-number">Capítulo 3</span> Gráficos Básicos no R</h1>
 <script src=https://cdn.datacamp.com/datacamp-light-latest.min.js></script>
-<p>Here is a review of existing methods.</p>
+<p>Parte importante na ánalise de dados, desenvolvimento de modelos e interpretação de dados é o uso de ferramentas de visualização. Os gráficos são ferramentas poderosas que, em geral, auxilia o analista de dados a entender melhor conceitos e “extrair” informações de forma facilitada quando comparado a versão tabular.</p>
+<div id="historico" class="section level2">
+<h2><span class="header-section-number">3.1</span> Histórico</h2>
+<p>As primeiras versões públicas do R apresentavam um grande diferencial em relação aos outros softwares de análise de dados da época (início 1990) que era a flexibilidade de ajustes e formatos. Esta facilidade e poder de ajustar/alterar todos os itens de um gráfico, aliados a facilidade de codificar modelos de forma facilitada, compoem os principais tópicos do sucesso da ferramenta no que se refere ao seu uso como software de análise de dados e computação científica.</p>
+<p>Ao se instalar o R pela primeira vez, o mesmo oferece um conjunto de funcinalidades básicas e muitas outras obitidas por meio de plugins - que são chamadas de <em>library</em> (bibliotecas). Em relação aos gráficos nos temos as seguinte opções (lista não exasustiva):</p>
+<div id="base-default" class="section level3">
+<h3><span class="header-section-number">3.1.1</span> Base (<em>default</em>)</h3>
+</div>
+<div id="lattice-lattice" class="section level3">
+<h3><span class="header-section-number">3.1.2</span> Lattice (<em>lattice</em>)</h3>
+</div>
+<div id="ggplot2-ggplot2" class="section level3">
+<h3><span class="header-section-number">3.1.3</span> GGPlot2 (<em>ggplot2</em>)</h3>
 
+</div>
+</div>
 </div>
             </section>
 
