--- a/graph-dyn.html
+++ b/graph-dyn.html
@@ -105,7 +105,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Conteúdos</a></li>
 <li class="chapter" data-level="2" data-path="revisao.html"><a href="revisao.html"><i class="fa fa-check"></i><b>2</b> Revisão</a></li>
-<li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a></li>
+<li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a><ul>
+<li class="chapter" data-level="3.1" data-path="graph-base.html"><a href="graph-base.html#historico"><i class="fa fa-check"></i><b>3.1</b> Histórico</a><ul>
+<li class="chapter" data-level="3.1.1" data-path="graph-base.html"><a href="graph-base.html#base-default"><i class="fa fa-check"></i><b>3.1.1</b> Base (<em>default</em>)</a></li>
+<li class="chapter" data-level="3.1.2" data-path="graph-base.html"><a href="graph-base.html#lattice-lattice"><i class="fa fa-check"></i><b>3.1.2</b> Lattice (<em>lattice</em>)</a></li>
+<li class="chapter" data-level="3.1.3" data-path="graph-base.html"><a href="graph-base.html#ggplot2-ggplot2"><i class="fa fa-check"></i><b>3.1.3</b> GGPlot2 (<em>ggplot2</em>)</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="4" data-path="graph-dyn.html"><a href="graph-dyn.html"><i class="fa fa-check"></i><b>4</b> Gráficos Interativos e dinâmicos no R</a></li>
 <li class="chapter" data-level="5" data-path="model-theo.html"><a href="model-theo.html"><i class="fa fa-check"></i><b>5</b> Modelo de Simulação (Conceitos Teóricos)</a><ul>
 <li class="chapter" data-level="5.1" data-path="model-theo.html"><a href="model-theo.html#conhecendo-o-problema"><i class="fa fa-check"></i><b>5.1</b> Conhecendo o problema</a></li>
