--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="2" data-path="revisao.html"><a href="revisao.html"><i class="fa fa-check"></i><b>2</b> Revisão</a></li>
 <li class="chapter" data-level="3" data-path="graph-base.html"><a href="graph-base.html"><i class="fa fa-check"></i><b>3</b> Gráficos Básicos no R</a><ul>
 <li class="chapter" data-level="3.1" data-path="graph-base.html"><a href="graph-base.html#historico"><i class="fa fa-check"></i><b>3.1</b> Histórico</a></li>
-<li class="chapter" data-level="3.2" data-path="graph-base.html"><a href="graph-base.html#base-default"><i class="fa fa-check"></i><b>3.2</b> Base (<em>default</em>)</a></li>
+<li class="chapter" data-level="3.2" data-path="graph-base.html"><a href="graph-base.html#base-default"><i class="fa fa-check"></i><b>3.2</b> Base (<em>default</em>)</a><ul>
+<li class="chapter" data-level="3.2.1" data-path="graph-base.html"><a href="graph-base.html#exercicios"><i class="fa fa-check"></i><b>3.2.1</b> Exercícios</a></li>
+</ul></li>
 <li class="chapter" data-level="3.3" data-path="graph-base.html"><a href="graph-base.html#lattice-lattice"><i class="fa fa-check"></i><b>3.3</b> Lattice (<em>lattice</em>)</a></li>
 <li class="chapter" data-level="3.4" data-path="graph-base.html"><a href="graph-base.html#ggplot2-ggplot2"><i class="fa fa-check"></i><b>3.4</b> GGPlot2 (<em>ggplot2</em>)</a></li>
 </ul></li>
