--- a/model-pratical.html
+++ b/model-pratical.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Marcio Nicolau and Carlos Hölbig">
 
 
-<meta name="date" content="2017-05-02">
+<meta name="date" content="2017-05-10">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -113,7 +113,12 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="3.3" data-path="graph-base.html"><a href="graph-base.html#lattice-lattice"><i class="fa fa-check"></i><b>3.3</b> Lattice (<em>lattice</em>)</a></li>
 <li class="chapter" data-level="3.4" data-path="graph-base.html"><a href="graph-base.html#ggplot2-ggplot2"><i class="fa fa-check"></i><b>3.4</b> GGPlot2 (<em>ggplot2</em>)</a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="graph-dyn.html"><a href="graph-dyn.html"><i class="fa fa-check"></i><b>4</b> Gráficos Interativos e dinâmicos no R</a></li>
+<li class="chapter" data-level="4" data-path="graph-dyn.html"><a href="graph-dyn.html"><i class="fa fa-check"></i><b>4</b> Gráficos Interativos e dinâmicos no R</a><ul>
+<li class="chapter" data-level="4.1" data-path="graph-dyn.html"><a href="graph-dyn.html#trabalhar-com-informacoes"><i class="fa fa-check"></i><b>4.1</b> Trabalhar com informações</a></li>
+<li class="chapter" data-level="4.2" data-path="graph-dyn.html"><a href="graph-dyn.html#graficos-interativos"><i class="fa fa-check"></i><b>4.2</b> Graficos Interativos</a><ul>
+<li class="chapter" data-level="4.2.1" data-path="graph-dyn.html"><a href="graph-dyn.html#segue-alguns-exemplos"><i class="fa fa-check"></i><b>4.2.1</b> Segue alguns exemplos</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="5" data-path="model-theo.html"><a href="model-theo.html"><i class="fa fa-check"></i><b>5</b> Modelo de Simulação (Conceitos Teóricos)</a><ul>
 <li class="chapter" data-level="5.1" data-path="model-theo.html"><a href="model-theo.html#conhecendo-o-problema"><i class="fa fa-check"></i><b>5.1</b> Conhecendo o problema</a></li>
 <li class="chapter" data-level="5.2" data-path="model-theo.html"><a href="model-theo.html#coleta-de-informacoes"><i class="fa fa-check"></i><b>5.2</b> Coleta de informações</a></li>
